# NetShip

./: .clang-tidy  .gitignore  CMakeLists.txt  ProgrammerDocumentation.md  README.md  default.nix  flake.nix  result
cmake/: DefaultCompilerOptionsAndWarnings.cmake
src/: board.hpp  game.hpp  initial_menu.hpp  io.hpp  main.cpp  placement_menu.hpp  ship.hpp  tests.cpp
src/data/: data.hpp
src/game-logic/: game.cpp  game.hpp
src/net-comms/: client.cpp  client.hpp  controller.hpp  in_convertors.hpp  server.cpp  server.hpp
src/net-comms/out-facing/: client.cpp  client.hpp  common_cs.cpp  common_cs.hpp  server.cpp  server.hpp
src/ui/: game_screen.cpp  initial_menu.cpp  placement_menu.cpp  screens.hpp  ui_helpers.cpp  ui_helpers.hpp
